[tool.poetry]
name = "streamlit-site-clusters"
version = "0.1.0"
description = ""
authors = ["Fernando Cordeiro <fernando@daredata.engineering>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "streamlit_site_clusters"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
streamlit = "^1.16.0"
streamlit-folium = "^0.8.1"
folium = "^0.14.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
ipykernel = "^6.19.4"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
